Added api endpoint /api/repository/:repo_name/teams/:team_id/members that allows adding members
