# server/src/repositories/teams.js
@@ -1,9 +1,7 @@
 
-import TeamModelFactory from '../models/teams';
-
 export default ({ db }) => {
-
-    let TeamModel = TeamModelFactory({ db });
+    let TeamModel = db.models.team,
+        UserModel = db.models.user;
 
     return {
         create: ({ repository, displayName, description }) => new Promise(resolve => {
@@ -30,6 +28,19 @@ export default ({ db }) => {
         edit: (id, payload) => TeamModel.update(payload, {
             where: { id },
             fields: ['displayName', 'description']
-        })
+        }),
+
+        // Managing team members
+        getTeamMembers: teamId =>
+            TeamModel.findById(teamId, {
+                include: [
+                    { model: UserModel, attributes: ['displayName', 'username', 'profileUrl'] }
+                ]
+            }),
+        addTeamMember: (teamId, userId) => 
+            Promise.all([
+                TeamModel.findById(teamId),
+                UserModel.findById(userId)
+            ]).then(([ team, user ]) => team.addUser(userId))
     }
 }
