# server/swagger.yml
@@ -34,7 +34,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/Team'
+              $ref: '#/definitions/ShallowTeam'
     post:
       summary: Creating a new team in the repo
       parameters:
@@ -48,20 +48,48 @@ paths:
           description: Team
           required: true
           schema: 
-            $ref: '#/definitions/RawTeam'
+            properties:
+              username:
+                type: string
+                description: displayName
+              description:
+                type: string
+                description: description of the team.
       tags:
         - Teams
       responses:
         200:
           description: Newly created team
           schema:
-            $ref: '#/definitions/Team'
+            $ref: '#/definitions/ShallowTeam'
         400:
           description: Team already exists
           schema:
             $ref: '#/definitions/Error'
 
   /repository/{repository_name}/teams/{team_id}:
+    get:
+      summary: Gets metadata about the team as well as it's members
+      parameters:
+        - name: repository_name
+          in: path
+          description: Name of repository
+          required: true
+          type: string
+        - name: team_id
+          in: path
+          description: Team Id
+          required: true
+          type: string
+      tags:
+        - Teams
+      responses:
+        200:
+          description: Team metadata as well as it's members
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Team'
     put:
       summary: Updates a team's displayName or description
       parameters:
@@ -112,10 +140,73 @@ paths:
           description: Team already exists
           schema:
             $ref: '#/definitions/Error'
+  
+  /repository/{repository_name}/teams/{team_id}/members:
+    post:
+      summary: Adding a member to the team
+      parameters:
+        - name: repository_name
+          in: path
+          description: Name of repository
+          required: true
+          type: string
+        - name: team_id
+          in: path
+          description: Team Id
+          required: true
+          type: string
+        - name: body
+          in: body
+          description: Team
+          required: true
+          schema: 
+            properties:
+              username:
+                type: string
+                description: username
+      tags:
+        - Teams
+      responses:
+        200:
+          description: Success
+        400:
+          description: Internal Error (code=INTERNAL_ERROR)
+          schema:
+            $ref: '#/definitions/Error'
+
+
+# DEFINITIONS
 definitions:
   RawTeam:
     type: object
     properties:
+      displayName:
+        type: string
+        description: Team Name
+      repository:
+        type: string
+        description: Repository that the team belongs to
+      description:
+        type: string
+        description: Description of the team
+  User:
+    type: object
+    properties:
+      username:
+        type: string
+        description: github username
+      displayName:
+        type: string
+        description: display name
+      profileUrl:
+        type: string
+        description: link to their github profile
+  ShallowTeam:
+    type: object
+    properties:
+      id:
+        type: string
+        description: Unique id
       displayName:
         type: string
         description: Team Name
@@ -140,6 +231,16 @@ definitions:
       description:
         type: string
         description: Description of the team
+      createdAt:
+        type: string
+        description: Created at
+      updatedAt:
+        type: string
+        description: Updated at
+      users:
+        type: array
+        items:
+          $ref: '#/definitions/User'
   Error:
     type: object
     properties:
